overflow correction

--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     font-family: "Poppins", sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 html {
     scroll-behavior: smooth;
 }
